<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OculosOpressor</string>
    <string name="action_settings">Settings</string>
    <string name="shit_happens">Alguma coisa ruim aconteceu!</string>
    <string name="add_photo">Adiconar Foto</string>
    <string name="add_glass">Instrumento Opressor</string>
    <string name="save_opression">Salvar Opressão!</string>
    <string name="app_name_uppercase">OCULOS OPRESSOR</string>
    <string name="welcome">Seja bem vindo!</string>
    <string name="gallery_opression">Galeria Opressora</string>
    <string name="picture_saved_msg">  Sua Opressão está na galeria:</string>
    <string name="size">Tamanho</string>
    <string name="turn">Girar</string>
    <string name="describe_notification">Que tal uma opressão agora ?</string> 
    <string name="configuration">Configuração</string>     
    <string name="enable_notification">Habilitar Notificações</string>     
    <string name="share">Compartilhar</string>         
</resources>
